# ream

./: .gitignore  .ream_history  Cargo.toml  demo.scm  minimal_tlisp.rs  ream_bytecode.rs  ream_simple.rs  working_demo.scm
ream-macros/: Cargo.toml
ream-macros/src/: codegen.rs  error.rs  lib.rs  parsing.rs  utils.rs
scripts/: test_serverless.sh
sqlite/: Cargo.toml
sqlite/src/: error.rs  lib.rs  main.rs  types.rs
sqlite/src/btree/: algebra.rs  cursor.rs  mod.rs  node.rs
sqlite/src/engine/: config.rs  mod.rs
sqlite/src/page_cache/: coalgebra.rs  lru.rs  mod.rs  page.rs
sqlite/src/parser/: ast.rs  lexer.rs  mod.rs  sql_parser.rs
sqlite/src/query/: executor.rs  mod.rs  plan.rs  planner.rs  result.rs
sqlite/src/schema/: constraint.rs  index.rs  mod.rs  registry.rs  table.rs
sqlite/src/transaction/: command.rs  manager.rs  mod.rs  wal.rs
src/: cli.rs  commands.rs  debug.rs  error.rs  lib.rs  main.rs  repl.rs  sqlite.rs  types.rs
src/bytecode/: compiler.rs  instruction.rs  mod.rs  optimizer.rs  program.rs  registry.rs  security.rs  verifier.rs
src/daemon/: ipc.rs  mod.rs  monitor.rs  runtime.rs  tui.rs
src/jit/: compiler.rs  mod.rs  optimization.rs  runtime.rs
src/orm/: advanced_query_builder.rs  advanced_sql.rs  algebra.rs  coalgebra.rs  driver.rs  feature_compatibility.rs  graphql.rs  graphql_compiler.rs  graphql_composable.rs  graphql_macro.rs  graphql_parser.rs  graphql_tlisp.rs  migration.rs  mod.rs  mutation.rs  mutation_compiler.rs  nested_relations.rs  plugin.rs  postgres_advanced.rs  query.rs  schema.rs  sql_composable.rs  sql_macro.rs  sqlite_advanced.rs  sqlserver_advanced.rs  types.rs
src/orm/examples/: advanced_sql_showcase.rs  mod.rs
src/orm/tests/: advanced_features_test.rs  graphql_composable_test.rs  graphql_test.rs  mod.rs  schema_based_test.rs  subquery_test.rs
src/p2p/: error.rs  mod.rs  node.rs  types.rs
src/p2p/actor/: distributed.rs  migration.rs  mod.rs  registry.rs  supervision.rs
src/p2p/cluster/: failure_detection.rs  membership.rs  metrics.rs  mod.rs  recovery.rs
src/p2p/consensus/: common.rs  mod.rs  pbft.rs  raft.rs
src/p2p/discovery/: bootstrap.rs  dht.rs  gossip.rs  mod.rs
src/p2p/network/: mod.rs  protocol.rs  router.rs  session_types.rs  transport.rs
src/runtime/: actor.rs  advanced_runtime.rs  bounded_execution.rs  executor.rs  isolated_process.rs  memory.rs  message.rs  mod.rs  preemption.rs  process.rs  realtime.rs  resource_manager.rs  scheduler.rs  serverless_runtime.rs  stm_mailbox.rs  supervisor.rs  work_stealing.rs
src/runtime/serverless/: cold_start.rs  hibernation.rs  metrics.rs  mod.rs  resources.rs  tests.rs  zero_copy.rs
src/security/: access_control.rs  audit.rs  basic_security.rs  consensus.rs  crypto.rs  env_manager.rs  mod.rs  tlisp_integration.rs
src/tlisp/: actor_primitives.rs  actor_system.rs  capability_system.rs  constraint_solver.rs  cross_language_bridge.rs  dependent_type_checker.rs  dependent_type_checker_test.rs  dependent_type_integration_test.rs  dependent_types_test.rs  effect_system.rs  enhanced_compiler.rs  environment.rs  evaluator.rs  example_tests.rs  integration_tests.rs  macros.rs  mod.rs  module_system.rs  package_config.rs  package_manager.rs  package_registry.rs  parser.rs  pattern_matching.rs  production_runtime.rs  production_stdlib.rs  ream_bridge.rs  resource_integration.rs  runtime.rs  rust_crate_integration.rs  rust_integration.rs  rust_modules.rs  rust_modules_tests.rs  security_integration.rs  serverless.rs  session_types.rs  standard_library.rs  stm_integration.rs  type_evaluator.rs  types.rs  types_backup.rs  (+1 more)
src/tlisp/stdlib/: p2p.rs
src/tlisp/tests/: cross_language_bridge_tests.rs  mod.rs  module_system_tests.rs  package_config_tests.rs  package_manager_tests.rs  rust_integration_tests.rs
tests/: actor_model_features_test.rs  algorithm_benchmark_tests.rs  compiled_algorithm_benchmark_tests.rs  comprehensive_benchmark.rs  comprehensive_test_suite.rs  graphql_composable_orm_test.rs  integration_test.rs  orm_integration_test.rs  p2p_comprehensive_tests.rs  p2p_fault_tolerance_tests.rs  p2p_integration_tests.rs  p2p_performance_tests.rs  p2p_property_tests.rs  preemptive_scheduling_test.rs  production_features_test.rs  production_tlisp_integration_test.rs  real_consensus_tests.rs  real_p2p_networking_tests.rs  realtime_scheduling_test.rs  resource_management_test.rs  security_verification_test.rs  standalone_package_manager_test.rs  supervision_tree_complete_test.rs  tlisp_complete_features_test.rs  tlisp_comprehensive_test.rs  tlisp_dependent_type_test.rs  tlisp_execution_modes_showcase_test.rs  tlisp_macro_integration_tests.rs  tlisp_native_compilation_test.rs  tlisp_p2p_integration_tests.rs  tlisp_showcase_runner_test.rs  tlisp_simple_showcase_test.rs  work_stealing_test.rs
