[package]
name = "ream-macros"
version = "0.1.0"
edition = "2021"
authors = ["REAM Team"]
description = "Procedural macros for REAM - Rust Erlang Abstract Machine"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
# Procedural macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# For type registration
inventory = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
trybuild = "1.0"
