[package]
name = "categorical-sqlite"
version = "0.1.0"
edition = "2021"
authors = ["Rust Lessons"]
description = "A mathematical SQLite implementation using category theory and algebraic patterns"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Collections and utilities
indexmap = "2.0"
dashmap = "5.0"

# Parsing
nom = "7.0"

# Hashing
sha2 = "0.10"

# File I/O
memmap2 = "0.9"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Testing
proptest = "1.0"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bin]]
name = "sqlite"
path = "src/main.rs"


